--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,8 @@ phases:
       - aws --version
       # 環境変数の設定
       - AWS_ACCOUNT_ID=482122962623
-      - ECR_URI=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com
-      - REPOSITORY_URI=${ECR_URI}/ecs_cicd_terraform-image
+      - ECR_URI=482122962623.dkr.ecr.ap-northeast-1.amazonaws.com
+      - REPOSITORY_URI=public.ecr.aws/w6q1d4u6/ecs_cicd_terraform-image/ecs_cicd_terraform-image
       - CONTAINER_NAME=example-prod-web01
       # コミットハッシュの先頭7桁をタグに利用する
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
